<resources>
    <string name="app_name">Al Maktaba</string>
    <string name="welcome_to_al_maktaba">Welcome to Al Maktaba</string>
    <string name="login_into_your_account">Login into your account</string>

   <!-- <string name="facebook_app_id">618957538495944</string>
    <string name="fb_login_protocol_scheme">fb618957538495944</string>-->
    <string name="facebook_app_id">1081177958746736</string>
    <string name="fb_login_protocol_scheme">fb1081177958746736</string>
    <string name="email_username">Email/Username</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SIGNUP</string>
    <string name="or">OR</string>
    <string name="good_to_see_you_again">Good to see you again !</string>
    <string name="signup_for_new_user">Signup for new user</string>
    <string name="email">Email</string>
    <string name="show">Show</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hide">Hide</string>
    <string name="my_departments">My Departments</string>
    <string name="str_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="my_university">My University</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="forgot">Forgot??</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_the_email_you_used_at_the_time_of_registration_to_get_password_reset_instructions">Please enter the email you used at the time of registration to get password reset instructions</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="no_records_available">No Records Available</string>
    <string name="universities">Universities</string>
    <string name="suggest_university">Suggest University</string>
    <string name="please_enter_university_name">Please enter university name</string>
    <string name="submit">Submit</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="please_enter_confirm_password">Please confirm your password</string>
    <string name="password_not_matching">Please check your password and confirm password</string>
    <string name="open_camera">Open camera</string>
    <string name="photo_library">Photo library</string>
    <string name="choose_university_logo_from">Choose University Logo From</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="settings">Settings</string>
    <string name="tap_to_change_your_department">Tap to change your Department</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="please_enter_current_password">Please enter your current password</string>
    <string name="please_enter_new_password">Please enter your new password</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="please_select_image_to_upload">University logo required</string>
    <string name="please_select_profile_image_to_upload">Please select profile image to upload!</string>
    <string name="please_enter_first_name">Please enter your first name</string>
    <string name="please_enter_last_name">Please enter your last name</string>
    <string name="enter_mobile_number">Please enter your mobile number</string>
    <string name="colleges">Colleges</string>
    <string name="please_enter_college_name">Please enter college name</string>
    <string name="enter_university_name">Enter university name</string>
    <string name="university_name">University name</string>
    <string name="enter_college_name">College Name</string>
    <string name="departments">Departments</string>
    <string name="please_enter_department_name">Please enter department name</string>
    <string name="enter_department_name">Department name</string>
    <string name="suggest_department">Suggest Department</string>
    <string name="suggest_college">Suggest College</string>
    <string name="search">Search</string>
    <string name="do_you_want_to_enroll_the_department_you_have_chosen">Do you want to enroll the department you have chosen?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="courses">Courses</string>
    <string name="suggest_course">Suggest Course</string>
    <string name="code">Code</string>
    <string name="course_name">Course Name</string>
    <string name="please_enter_course_code">Please enter course code</string>
    <string name="department_courses">My Department Courses</string>
    <string name="are_you_suer_you_want_to_logout_from_almaktaba">Are you sure you want to logout?</string>
    <string name="please_check_your_internet_connection">The Internet connection appears to be offline.</string>
    <string name="upload_docs">Upload Docs</string>
    <string name="document_title">Document title</string>
    <string name="choose_your_docs">CHOOSE YOUR DOCS</string>
    <string name="documents">Document Feed</string>
    <string name="scan_document">Scan Document</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="browse_document">Browse Document</string>
    <string name="delete">Delete</string>
    <string name="share">Share Post</string>
    <string name="report">Report</string>
    <string name="select_report_type">Select report type</string>
    <string name="report_type">Report Type</string>
    <string name="done">Done</string>
    <string name="not_related_to_this_course">Not related to this course</string>
    <string name="contains_advertisement">Contains advertisement</string>
    <string name="other">Other</string>
    <string name="please_select_report_type">Please select report type</string>
    <string name="downloading">Downloading..</string>
    <string name="loading">Loading..</string>
    <string name="uploading">Uploading..</string>
    <string name="add_new_page">Add new page</string>
    <string name="upload_now">Upload</string>
    <string name="preview">Preview</string>
    <string name="fit_document_into_screen">Fit document into screen.</string>
    <string name="a_verification_code_was_sent_to_you_please_check_your_mail_and_enter_the_received_verification_code_below">A verification code was sent to you. Please check your mail and enter the received verification code below</string>
    <string name="enter_otp_number">Enter OTP Number</string>
    <string name="i_did_not_receive_a_verification_code_email">I did not receive a verification code email</string>

    <string name="ad_mob_key">ca-app-pub-7466393711815362~5096067485</string>
    <string name="ad_mob_unit_id">ca-app-pub-7466393711815362/2086760767</string>

    <string name="user_inactivated">This user is inactivated!</string>
    <string name="preparing_preview">Preparing Preview. Please wait...</string>
    <string name="all_downloads_completed">All Downloads are completed</string>
    <string name="enter_document_name">Document name</string>
    <string name="please_enter_document_name">Please enter document name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="choose_user_profile_image_from">Choose User Profile Image From</string>
    <string name="please_enter_course_name">Please enter course name</string>
    <string name="please_enter_document_title">Please enter document title</string>
    <string name="please_write_document_details">Please write document details</string>
    <string name="please_wait">Please Wait</string>
    <string name="error_while_uploading_profile_image">Getting error while upload profile image</string>
    <string name="request_time_out">The request timed out, please verify your internet connection and try again.
</string>
    <string name="video_size_is_bigger_than_50">Selected video size is bigger than 50mb, Please select other video.</string>
    <string name="unable_to_reach_to_server">Unable to reach to the server, please try again after few minutes</string>
    <string name="internal_server_error">Server error!</string>
    <string name="guest">GUEST</string>
    <string name="continue_as_guest">Continue as a</string>
    <string name="teake_me_there">Take Me There</string>
    <string name="close">Close</string>
    <string name="login_or_register_to_proces">Need to complete first registration or login process</string>
    <string name="move_closer">Move closer...</string>
    <string name="no_filter">No Filter</string>
    <string name="black_and_white"><![CDATA[Black & White]]></string>
    <string name="gray">Gray</string>
    <string name="magic_color">Magic Color</string>
    <string name="hold_still">Hold Still.</string>
    <string name="nothing_found_snap_manually">Nothing found. Snap manually.</string>
    <string name="yesterday_at">Yesterday at</string>
    <string name="invalid_username_password">Invalid username or password, try again</string>
    <string name="please_verify_your_account">Please verify your account.</string>
    <string name="email_already_exists">Email already exists.</string>
    <string name="the_user_has_been_edited">The user has been edited.</string>
    <string name="password_has_been_changed"> Password has been changed.</string>
    <string name="current_password_does_not_match">Current password does not match.</string>
    <string name="email_send_successfully">Email send successfully.</string>
    <string name="document_has_been_saved">The Documents has been saved.</string>
    <string name="document_could_not_be_saved_try_again">The Documents could not be saved. Please, try again.</string>
    <string name="the_document_has_been_deleted">The Documents has been deleted.</string>
    <string name="suggestion_has_been_saved">The Suggestion has been saved.</string>
    <string name="are_you_sure_you_want_to_upload">Are you sure want to upload?</string>
    <string name="are_you_sure_want_to_download">Are you sure want to download?</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete?</string>
    <string name="download">Download</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="ok">Ok</string>
    <string name="document_size_bigger_than_25"> The document size is greater than 25 megabytes</string>

    <string-array name="rtl_lang">
        <item>ar</item>
        <item>dv</item>
        <item>fa</item>
        <item>ha</item>
        <item>he</item>
        <item>iw</item>
        <item>ji</item>
        <item>ps</item>
        <item>ur</item>
        <item>yi</item>

    </string-array>

</resources>
