<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tv_alert_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/do_you_want_to_enroll_the_department_you_have_chosen"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="12dp"
        >
        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/colorPrimaryDark"
            />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/yes"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:foreground="?attr/selectableItemBackground"
            />

    </LinearLayout>
</LinearLayout>