<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.technostacks.almaktaba.activity.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/good_to_see_you_again"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_for_new_user"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/ed_signup_user_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/round_ed_bg"
                android:gravity="center_vertical"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textSize="14sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.3"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_lock" />

            <EditText
                android:id="@+id/ed_signup_user_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/round_ed_bg"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_show_signup_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/show"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:layout_weight="0.3"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_lock" />

            <EditText
                android:id="@+id/ed_signup_user_confirm_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/round_ed_bg"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:imeOptions="actionDone"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_show_signup_confirm_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/show"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:layout_weight="0.3"
                android:textSize="12sp"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/round_btn_bg"
            android:text="@string/signup"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
</ScrollView>