<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
    />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_document_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_document_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <EditText
            android:id="@+id/ed_document_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            tools:text="123"
            android:focusableInTouchMode="true"
            android:textColor="@color/black"
            android:inputType="text"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
    android:id="@+id/btn_submit_doc_name"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="35dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:foreground="?attr/selectableItemBackground"
    android:background="@drawable/round_btn_bg"
    android:text="@string/submit"
    android:textColor="@color/colorPrimary" />

</LinearLayout>